Changelog for Miosix np embedded OS

- Changed version number from v1.61 to v20.alpha1 in version.cpp.
- Added -Wno-unused-but-set-variable to Makefile.
- Added testsuite check for global objects support outside of the kernel.
- Removed the use of global objects in the serial port drivers.
- Breaking change regarding constructors of global objects. Up to Miosix v1.61
  they were called during stage_1_boot, therefore before the kernel was
  started. They are now called in stage_2_boot, right before calling main.
  This results in a more intuitive behaviour, as it is now possible to
  write on stdout, access the filesystem, create threads, etc. within
  constructors of global objects. On the downside it is no longer possible to
  instantiate global objects withing the kernel itself, as this would cause
  the risk of accessing objects before their constructor has run. The lack of
  global objects is actively check by check_global_objects.pl at compile time
  to prevent errors.
- Changed stm32vldiscovery default stdio redirection from the DCC to the
  serial port.
- Added stm32f4 sdio driver, tested on stm32f4discovery.
- Improved the SDIO drivers for both stm32f1 and stm32f2. It now uses
  DMA transfers whenever possible. In the stm32f2 it is always possible,
  while in the stm32f1 it is done if the FSMC is not used for data storage.
- Added a test in the testsuite to check writing and reading large files
  from disk, with checksum of the written data.
- Modified the signature of crc16 to accept a void* instead of a char*,
  to avoid casting issues.
- Actually, monitor_soft_reset_halt seems to work in JTAG mode but not with SWD
- Changed references to "monitor soft_reset_halt" into "monitor reset halt"
  as openocd changed in version 0.6.1
- Added scripts to build the new GCC 4.7.2
- Fixed a bug causing a deadlock if a wait on a condition variable is done
  on recursive mutex locked more than once.